--- a/PainelCipa/Views/Candidates/Details.cshtml
+++ b/PainelCipa/Views/Candidates/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.Photo)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Election)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Election.Id)
+        </dd>
     </dl>
 </div>
 <div>
