--- a/PainelCipa/Views/Candidates/Edit.cshtml
+++ b/PainelCipa/Views/Candidates/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ElectionID" class="control-label"></label>
+                <select asp-for="ElectionID" class="form-control" asp-items="ViewBag.ElectionID"></select>
+                <span asp-validation-for="ElectionID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
