--- a/PainelCipa/Views/Candidates/Index.cshtml
+++ b/PainelCipa/Views/Candidates/Index.cshtml
@@ -13,16 +13,13 @@
     <thead>
         <tr>
             <th data-sortable="true">
-                @*@Html.DisplayNameFor(model => model.Name)*@
-                Nome
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th data-sortable="true">
-                @*@Html.DisplayNameFor(model => model.Department)*@
-                Departamento
+                @Html.DisplayNameFor(model => model.Department)
             </th>
             <th data-sortable="true">
-                @*@Html.DisplayNameFor(model => model.Role)*@
-                Cargo
+                @Html.DisplayNameFor(model => model.Role)
             </th>
             @*<th>
                   Html.DisplayNameFor(model => model.Photo)
@@ -30,8 +27,8 @@
                 </th>
             *@
             <th data-sortable="true">
-                @*@Html.DisplayNameFor(model => model.Election)*@
                 Eleição
+                @Html.DisplayNameFor(model => model.Election)
             </th>
             <th></th>
         </tr>
