--- a/PainelCipa/Views/Elections/Edit.cshtml
+++ b/PainelCipa/Views/Elections/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PainelCipa.Models.Election
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
-<h4>Election</h4>
+<h4>Eleição</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
