--- a/PainelCipa/Views/Elections/Index.cshtml
+++ b/PainelCipa/Views/Elections/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<PainelCipa.Models.Election>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Eleições";
 }
 
-<h2>Index</h2>
+    <div class="page-header" style="border-bottom: 1px solid #eee">
+        <h1>Eleições</h1>
+    </div>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar uma nova eleição</a>
 </p>
 <table class="table">
     <thead>
@@ -25,23 +27,24 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HasFinished)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HasStarted)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HasFinished)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HasStarted)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
