--- a/PainelCipa/Views/Candidates/Details.cshtml
+++ b/PainelCipa/Views/Candidates/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>Candidate</h4>
+    <h4>Candidato</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -47,6 +47,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
