--- a/PainelCipa/Views/Elections/Create.cshtml
+++ b/PainelCipa/Views/Elections/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PainelCipa.Models.Election
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
-<h2>Create</h2>
+<h2>Criar</h2>
 
-<h4>Election</h4>
+<h4>Eleição</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,14 +32,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
 
 @section Scripts {
