--- a/PainelCipa/Views/Elections/Delete.cshtml
+++ b/PainelCipa/Views/Elections/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PainelCipa.Models.Election
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
-<h2>Delete</h2>
+<h2>Deletar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja deletar?</h3>
 <div>
     <h4>Election</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-default" /> |
+        <a asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
