--- a/PainelCipa/Views/Elections/Details.cshtml
+++ b/PainelCipa/Views/Elections/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model PainelCipa.Models.Election
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>Election</h4>
+    <h4>Eleição</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
