--- a/PainelCipa/Views/Candidates/Details.cshtml
+++ b/PainelCipa/Views/Candidates/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PainelCipa.Models.Candidate
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
 <h2>Detalhes</h2>
