--- a/PainelCipa/Views/Candidates/Index.cshtml
+++ b/PainelCipa/Views/Candidates/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<PainelCipa.Models.Candidate>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Candidatos";
 }
 
-<h2>Index</h2>
+<h2>Candidatos</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar</a>
 </p>
 <table class="table table-hover table-striped table-bordered" data-toggle="table" data-search="true" data-sortable="true" data-pagination="true">
     <thead>
